tests/ui/alloc-error/alloc-error-handler-bad-signature-2.stderr
error[E0308]: mismatched types
  --> $DIR/alloc-error-handler-bad-signature-2.rs:10:1
   |
LL |    #[alloc_error_handler]
   |    ---------------------- in this procedural macro expansion
LL | // fn oom(
LL | ||     info: Layout,
LL | || ) {
   | ||_- arguments to this function are incorrect
LL | |      loop {}
LL | |  }
   | |__^ expected `Layout`, found `core::alloc::Layout`
   |
note: function defined here
  --> $DIR/alloc-error-handler-bad-signature-2.rs:10:4
   |
LL | fn oom(
   |    ^^^
LL |     info: Layout,
   |     ------------

error[E0308]: mismatched types
  --> $DIR/alloc-error-handler-bad-signature-2.rs:10:1
   |
LL |    #[alloc_error_handler]
   |    ---------------------- in this procedural macro expansion
LL | // fn oom(
LL | ||     info: Layout,
LL | || ) {
   | ||_^ expected `!`, found `()`
LL | |      loop {}
LL | |  }
   | |__- expected `!` because of return type
   |
   = note:   expected type `!`
           found unit type `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
